tests/semantic/union_types/union_types.err
Warning: No rules/facts defined for relation D in file union_types.dl at line 18
.decl D (i:three)
------^-----------
Error: Relation expects value of type one but got argument of type all in file union_types.dl at line 32
G(X) :- E(X). // error
--^--------------------
Error: Relation expects value of type one but got argument of type all in file union_types.dl at line 34
E(X) :- F(X), !A(X), !B(X). // error
-----------------^-------------------
Error: Relation expects value of type two but got argument of type all in file union_types.dl at line 34
E(X) :- F(X), !A(X), !B(X). // error
------------------------^------------
Error: Unable to deduce valid type for expression, as base types are disjoint in file union_types.dl at line 35
E(X) :- F(X), A(X), B(X). // error
--^--------------------------------
Error: Unable to deduce valid type for expression, as base types are disjoint in file union_types.dl at line 35
E(X) :- F(X), A(X), B(X). // error
----------^------------------------
Error: Unable to deduce valid type for expression, as base types are disjoint in file union_types.dl at line 35
E(X) :- F(X), A(X), B(X). // error
----------------^------------------
Error: Unable to deduce valid type for expression, as base types are disjoint in file union_types.dl at line 35
E(X) :- F(X), A(X), B(X). // error
----------------------^------------
Error: Relation expects value of type one but got argument of type three in file union_types.dl at line 38
C(X) :- D(X), !A(X). // error
-----------------^------------
8 errors generated, evaluation aborted
